加入闯关成功失败页面

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
+        android:textSize="20sp"
         android:layout_marginTop="18dp"
         android:layout_marginRight="50dp"
-        android:text="最高分:10" />
+        android:text="最高分:" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -34,7 +35,7 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:background="@drawable/shape"
         android:text="ENTER"/>
 
