--- a/app/src/main/res/layout/activity_problem.xml
+++ b/app/src/main/res/layout/activity_problem.xml
@@ -14,6 +14,7 @@
             android:id="@+id/getGrade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#000"
             android:layout_marginTop="25dp"
             android:textSize="20sp"
             android:text="得分:" />
@@ -22,6 +23,7 @@
             android:id="@+id/Grade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#000"
             android:layout_marginTop="25dp"
             android:textSize="20sp"
             android:text="0" />
@@ -37,6 +39,7 @@
             android:id="@+id/random_problem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#000"
             android:layout_marginTop="25dp"
             android:textSize="40sp"
             android:text="1+20=" />
@@ -45,6 +48,7 @@
             android:id="@+id/answer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="#000"
             android:layout_marginTop="25dp"
             android:textSize="40sp"
             android:text="?" />
