--- a/app/src/main/res/layout/activity_fail.xml
+++ b/app/src/main/res/layout/activity_fail.xml
@@ -17,6 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000"
         android:layout_gravity="center_horizontal"
         android:textSize="45sp"
         android:text="挑战失败！"
@@ -26,6 +27,7 @@
         android:id="@+id/FailGrade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000"
         android:layout_gravity="center_horizontal"
         android:textSize="45sp"
         android:text="你的成绩是:"
