--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
+        android:textColor="#000"
         android:textSize="20sp"
         android:layout_marginTop="18dp"
         android:layout_marginRight="50dp"
@@ -17,6 +18,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000"
         android:textSize="60sp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="22dp"
