--- a/app/src/main/res/layout/activity_success.xml
+++ b/app/src/main/res/layout/activity_success.xml
@@ -17,6 +17,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000"
         android:layout_gravity="center_horizontal"
         android:textSize="45sp"
         android:text="恭喜你！创下新纪录"
@@ -26,6 +27,7 @@
         android:id="@+id/GoodGrade"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000"
         android:layout_gravity="center_horizontal"
         android:textSize="45sp"
         android:text="你的成绩是:"
