--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_gravity="right"
         android:textColor="#000"
         android:textSize="20sp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="50dp"
         android:text="最高分:" />
 
@@ -19,22 +19,43 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#000"
-        android:textSize="60sp"
+        android:textSize="55sp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="22dp"
         android:text="四则运算" />
     
     <ImageView
         android:id="@+id/firstPage"
-        android:layout_width="330dp"
-        android:layout_height="330dp"
+        android:layout_width="320dp"
+        android:layout_height="320dp"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/one"
         android:layout_marginTop="10dp"/>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="20sp"
+            android:layout_marginTop="20dp"
+            android:text="请选择题数:" />
+        <Spinner
+            android:id="@+id/spCity"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+
     <Button
         android:id="@+id/enter"
-        android:layout_width="300dp"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
