--- a/app/src/main/res/layout/activity_problem.xml
+++ b/app/src/main/res/layout/activity_problem.xml
@@ -11,11 +11,28 @@
         android:orientation="horizontal">
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:layout_marginTop="25dp"
+            android:textSize="20sp"
+            android:text="剩余题数：" />
+
+        <TextView
+            android:id="@+id/lastnum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:layout_marginTop="25dp"
+            android:textSize="20sp" />
+
+        <TextView
             android:id="@+id/getGrade"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000"
             android:layout_marginTop="25dp"
+            android:layout_marginLeft="20dp"
             android:textSize="20sp"
             android:text="得分:" />
 
