--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:textColor="#000"
-        android:textSize="20sp"
-        android:layout_marginTop="15dp"
+        android:textSize="15sp"
+        android:layout_marginTop="10dp"
         android:layout_marginRight="50dp"
         android:text="最高分:" />
 
@@ -21,7 +21,7 @@
         android:textColor="#000"
         android:textSize="55sp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="10dp"
         android:text="四则运算" />
     
     <ImageView
@@ -30,20 +30,34 @@
         android:layout_height="320dp"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/one"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="8dp"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000"
-            android:textSize="20sp"
+            android:textSize="15sp"
+            android:layout_marginTop="15dp"
+            android:text="难度:" />
+        <Spinner
+            android:id="@+id/spCity2"
             android:layout_marginTop="20dp"
-            android:text="请选择题数:" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="15sp"
+            android:layout_marginTop="20dp"
+            android:text="题数:" />
         <Spinner
             android:id="@+id/spCity"
             android:layout_marginTop="20dp"
@@ -52,6 +66,14 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/review"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/shape"
+        android:text="REVIEW"/>
 
     <Button
         android:id="@+id/enter"
