--- a/app/src/main/res/layout/question_content_frag.xml
+++ b/app/src/main/res/layout/question_content_frag.xml
@@ -14,6 +14,7 @@
             android:id="@+id/questionTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#000"
             android:layout_gravity="center"
             android:padding="10dp"
             android:visibility="visible"
